k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hamza-app
  namespace: hamza-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: hamza-app
  template:
    metadata:
      labels:
        app: hamza-app
    spec:
      containers:
        - name: hamza-app
          image: mourphy/hamza-app:v1
          ports:
            - containerPort: 80
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
