k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hamza-service
  namespace: hamza-project
spec:
  selector:
    app: hamza-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
