k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hamza-ingress
  namespace: hamza-project
spec:
  ingressClassName: nginx
  rules:
    - host: hamza.local  # Change the host to avoid conflict
      http:
        paths:
          - path: /  # Or use a different path if needed
            pathType: Prefix
            backend:
              service:
                name: hamza-service
                port:
                  number: 80
